@@ -18,6 +18,8 @@ Version 1.13.5+dev:
      probabilities. This method is inexact, but in very complex battles (extremely
      high HP, drain, slow, berserk, etc.) it's significantly faster than the default
      damage calculation method.
+ * Miscellaneous and bug fixes:
+   * Fixed a stray ; character appearing pre-entered in the command console.
 
 Version 1.13.5:
  * Campaigns:
